сделаны задания для Car
